# B1-Pertemuan-3

./: .gitignore  generate_template.py  nim_list
24060122120039/res/shader/: basic.vs
24060122120039/src/: MVP.cpp
24060122130064/src/: IBO.cpp
24060122130082/res/shader/: basic.fs
24060122140170/res/shader/: Textured.fs
24060122140174/: CMakeLists.txt
24060122140174/src/: MVP.cpp  main.cpp
include/common/: bmp_loader.hpp  controls.hpp  loader.hpp  shader.hpp  vbo_indexer.hpp
include/engine/: object.hpp  scene.hpp
